bynkc/tests/fixtures/positive/62_uses_chain/src/a/main.bynk
commons a

type Root = Int where Positive
