bynkc/tests/fixtures/negative/271_property_restates_refinement/src/demo/d.bynk
commons demo.d

type Pos = Int where Positive
